<resources>
    <string name="app_name">ChatDSCR</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logInEmailHint">Introduce tu correo</string>
    <string name="logInPasswordHint">Contraseña</string>
    <string name="logInButton">LOG IN</string>
    <string name="registerButtonLogInActivity">REGISTER</string>
    <string name="singInNameHint">Introduce tu nombre</string>
    <string name="registerButtonSignInActivity">REGISTER</string>
    <string name="profileButton">Perfil</string>
    <string name="newChat">Nuevo Chat</string>
    <string name="TextViewNewChatActivity">¡Empieza a chatear con todos tus amigos!</string>
    <string name="newChatEditTextIntroduceEmailHint">Introduce el correo de tu amigo/a</string>
    <string name="newChatButton">¡Al lío!</string>
    <string name="nameProfileActivity">Nombre: </string>
    <string name="emailProfileActivity">Email: </string>
    <string name="messageHint">Introduce tu mensaje</string>
    <string name="sendMessageButton">ENVIAR</string>
    <string name="headerMainScreenActivity">Chats abiertos</string>
    <string name="exitFromChatButton">Salir</string>
    <string name="introduceNameEditProfileActivity">Introduce tu nuevo nombre</string>
    <string name="hintEditProfileActivity">Ej: Aitor Tilla</string>
    <string name="buttonEditProfileActivity">Actualizar nombre</string>
    <string name="introducePassEditProfileActivity">Introduce la nueva contraseña</string>
    <string name="hintPassEditProfileActivity">Contraseña</string>
    <string name="hintRepeatPassEditProfileActivity">Repite la contraseña</string>
    <string name="actualizarPass">Actualizar Password</string>
    <string name="repeatLogInPasswordHint">Repite la contraseña</string>
    <string name="eliminarCuentaButton">Eliminar cuenta</string>
    <string name="logoutButton">Cerrar sesión</string>
    <string name="volverLoginActivity">Volver al Login</string>
    <string name="searchInMessages">Buscar</string>
    <string name="chatInfo">Chat Info</string>
    <string name="createdAtChat">Fecha de cración del Chat:</string>
    <string name="chatParticipants">Participantes del Chat</string>
    <string name="searchInMessagesInfoOfUse">¡Bienvenido al buscador de mensajes! En el siguiente campo podrás buscar un mensaje o fragmento de mensaje, si hay alguna coincidencia en el chat, te mostraremos el mensaje en cuestión</string>
    <string name="searchInMessagesHint">Hola Don Pepito</string>
    <string name="searchAnotation">*Nota: la búsqueda es sensible a mayúsculas y minúsculas, así que ten cuidado</string>
    <string name="searchInChats">Buscar chat</string>
    <string name="searchChatsInfoOfUse">¡Bienvenido al buscador de chats! En el siguiente campo podrás buscar el nombre de un amigo o un fragmento de este, si hay alguna coincidencia te mostraremos el chat en cuestión</string>
    <string name="searchChatAnotation">*Nota: la búsqueda es sensible a mayúsculas y minúsculas, así que ten cuidado. Si pinchas sobre un chat se abrirá automáticamente</string>
    <string name="searchChatsHint">Tyrion Lannister</string>
</resources>
