<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.SearchInMessagesActivity"
    android:padding="20dp"
    android:background="@color/backGroundColor"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/linearLayoutChat">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchChatsInfoOfUse"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchChatAnotation"
        android:textColor="@color/ButtonAndHintText"
        android:textStyle="italic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <EditText
        android:id="@+id/editTextSearchChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/searchChatsHint"
        android:textColorHint="@color/ButtonAndHintText"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <Button
        android:id="@+id/searchChatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchInMessages"
        android:background="@drawable/button_rounded"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <ListView
        android:id="@+id/resultChatSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>