<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainScreenActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/backGroundColor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/headerMainScreenActivity"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        android:background="@color/backGroundColor"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <ListView
        android:id="@+id/chatsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="265dp"
        android:layout_weight="1"
        android:background="@color/backGroundListView">

    </ListView>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/searchChatButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/searchInChats"
            android:background="@drawable/button_rounded"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/profileButton"
            android:background="@drawable/button_rounded"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/newChatButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/newChat"
            android:background="@drawable/button_rounded"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>