<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.ChatInfoActivity"
    android:padding="20dp"
    android:background="@color/backGroundColor"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chatInfo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createdAtChat"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <TextView
        android:id="@+id/textViewCreatedAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chatParticipants"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <TextView
        android:id="@+id/textViewChatParticipants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"/>

</LinearLayout>