<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.ChatActivity"
    android:background="@color/backGroundColor"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/friendNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/searchInMessagesButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/searchInMessages"
            android:background="@drawable/button_rounded"/>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/chatInfoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/chatInfo"
            android:background="@drawable/button_rounded"/>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/exitFromChatButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/exitFromChatButton"
            android:background="#E05757"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <ListView
        android:id="@+id/messagesListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:transcriptMode="alwaysScroll"
        android:stackFromBottom="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/editTextChatActivity"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/messageHint"
            android:inputType="textPersonName"
            android:textColorHint="@color/ButtonAndHintText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/messagesListView" />

        <Button
            android:id="@+id/sendMessageButton"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/sendMessageButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextChatActivity"
            app:layout_constraintTop_toBottomOf="@+id/messagesListView"
            android:background="@drawable/button_rounded" />

    </LinearLayout>

</LinearLayout>